syntax = "proto3";

package io.aggregator.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option java_outer_classname = "FrontendService";

service Frontend {
  option (kalix.codegen) = {
    action: {}
  };

  rpc GenerateTransactions(GenerateTransactionsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/generate-transactions"
      body: "*"
    };
  }

  rpc GenerateTransactionsSingleMerchant(GenerateTransactionsSingleMerchantRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/generate-transactions-single-merchant"
      body: "*"
    };
  }
}

message GenerateTransactionsRequest {
  int32 merchant_id_range = 1;
  int32 transaction_count = 2;
  int32 transaction_interval_ms = 3;
  google.protobuf.Timestamp day = 4;
}

message GenerateTransactionsSingleMerchantRequest {
  string merchant_id = 1;
  string service_code = 2;
  string account_from = 3;
  string account_to = 4;
  int32 transaction_id_first = 5;
  int32 transaction_id_last = 6;
  int32 transaction_interval_ms = 7;
  google.protobuf.Timestamp day = 8;
}
